--- a/quarantine-angular/src/app/app.component.html
+++ b/quarantine-angular/src/app/app.component.html
@@ -1,5 +1,5 @@
 <nb-layout>
-  <nb-layout-header fixed>
+  <!-- <nb-layout-header fixed>
     <div class="container">
       <nav class="nav">
         <a href="index.html" class="nav-logo">No Framework</a>
@@ -25,23 +25,23 @@
         </div>
       </nav>
     </div>
-  </nb-layout-header>
+  </nb-layout-header> -->
 
   <nb-layout-column>
     <section class="hero">
       <div class="circle circle-small">
-        <img src="images/circle-small.png" alt="" />
+        <img src="../assets/images/circle-small.png" alt="" />
       </div>
       <div class="circle circle-large">
-        <img src="images/circle-large.png" alt="" />
+        <img src="../assets/images/circle-large.png" alt="" />
       </div>
 
       <div class="container">
         <div class="content">
           <div class="text">
             <h1>
-              Lifestyle <br />
-              Smart <span>Watch</span>
+              Working <br />
+              From <span>Home</span>
             </h1>
             <h5>Technology of the future</h5>
             <p class="description">
@@ -53,7 +53,7 @@
             <a href="#" class="cta">Buy now</a>
           </div>
           <div class="watch-wrapper">
-            <img src="../assets/images/watch.png" alt="" />
+            <img src="../assets/images/coding.svg" alt="" />
           </div>
         </div>
       </div>
@@ -61,7 +61,6 @@
     <router-outlet></router-outlet>
   </nb-layout-column>
 
-  <nb-layout-footer fixed>
-    <!-- Insert footer here -->
-  </nb-layout-footer>
+  <!-- <nb-layout-footer>
+  </nb-layout-footer> -->
 </nb-layout>
