--- a/quarantine-angular/src/app/app.component.scss
+++ b/quarantine-angular/src/app/app.component.scss
@@ -1,22 +1,3 @@
-@import "themes";
-
-@import "~@nebular/theme/styles/globals";
-
-@include nb-install() {
-  @include nb-theme-global();
-}
-/* You can add global styles to this file, and also import other style files */
-
-@font-face {
-  font-family: "Gotu", sans-serif;
-  src: url("./assets/fonts/Gotu-Regular.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Rubik", sans-serif;
-  src: url("./assets/fonts/Rubik-Regular.ttf") format("truetype");
-}
-
 html {
   font-size: 10px;
 }
@@ -177,7 +158,7 @@ body {
 }
 
 .cta:hover {
-  // background-color: #994fff;
+  background-color: #994fff;
 }
 
 .watch-wrapper {
